# compiler_project

./: Cargo.toml  bugs.txt  rustfmt.toml  test_file.code
ast/: Cargo.toml
ast/src/: lib.rs
collections/: Cargo.toml
collections/src/: fifo.rs  lib.rs
collections/src/stream/: mod.rs  peekable.rs
diagnostics/: Cargo.toml
diagnostics/src/: builder.rs  lib.rs  span.rs
driver/: Cargo.toml
driver/src/: lib.rs
errors/: Cargo.toml
errors/src/: error_codes.rs  lib.rs
lexer/: Cargo.toml
lexer/macros/: Cargo.toml
lexer/macros/src/: create_tokenizer.rs  define_keyword_token.rs  lib.rs
lexer/src/: console_printer.rs  cursor.rs  lib.rs  raw_token_stream.rs  span.rs  syntax_token_stream.rs  token.rs  token_stream.rs
macros/: Cargo.toml
macros/src/: lib.rs  maybe_init_hack.rs  token.rs
old_parser/: Cargo.toml
old_parser/macros/src/: define_punctuation.rs
old_parser/old2/: diagnostics.rs  expressions.rs  lib.rs
old_parser/src/: errors.rs  lib.rs  parse_stream.rs  tokens.rs
old_parser/src/parsers/: combinators.rs  common.rs  expressions.rs  function.rs
parser/: Cargo.toml
parser/macros/: Cargo.toml
parser/macros/src/: create_parser.rs  define_keyword.rs  define_punctuation.rs  lib.rs
parser/src/: ast.rs  expressions.rs  function.rs  lib.rs  module.rs  parse_stream.rs  parser.rs  tokens.rs
parser/src/parsers/: combinators.rs  common.rs  expressions.rs  function.rs  mod.rs  scopes.rs
src/: main.rs  util.rs
src/parser/: ast.rs  mod.rs  syntax_pass.rs  tokenizer.rs
