[workspace]
members = [
    "collections",
    "lexer",
    "parser"
]

[package]
name = "test_lang"
version = "0.1.0"
authors = ["George Phillips <35049013+MNTRA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "*"
thiserror = "*"

[dependencies.collections]
path = "./collections"

[dependencies.parser]
path = "./parser"
