[package]
name = "collections"
version = "0.1.0"
authors = ["George Phillips <35049013+MNTRA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
thiserror = "*"

[dev-dependencies]
console = "*"
pretty_assertions = "*"