[package]
name = "driver"
version = "0.1.0"
authors = ["George Phillips <35049013+MNTRA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.diagnostics]
path = "../diagnostics"

[dependencies.errors]
path = "../errors"

[dependencies.parser]
path = "../parser"

[dependencies.tokio]
version = "1.2.0"
features = ["full"]

[dependencies]
async-scoped = { version = "*", features = ["use-tokio"] }