[package]
name = "lexer"
version = "0.1.0"
authors = ["George Phillips <35049013+MNTRA@users.noreply.github.com>"]
edition = "2018"

[tests]
path = "tests"

[dependencies.thiserror]
version = "*"

[dependencies.paste]
version = "*"

[dependencies.console]
version = "*"

[dependencies.lazy_static]
version = "*"

[dependencies.macros]
path = "macros"
package = "lexer_macros"

[dependencies.collections]
path = "../collections"

[dependencies.diagnostics]
path = "../diagnostics"

[dev-dependencies]
lexer = { path = "."}