[package]
name = "parser"
version = "0.1.0"
authors = ["George Phillips <35049013+MNTRA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.thiserror]
version = "*"

[dependencies.anyhow]
version = "*"

[dependencies.paste]
version = "*"

[dependencies.lexer]
path = "../lexer"

[dependencies.collections]
path = "../collections"

[dependencies.macros]
path = "macros"
package = "parser_macros"
